building the website from scratch

--- a/index.html
+++ b/index.html
@@ -7,11 +7,39 @@
     <link rel="stylesheet" href="resources/styles/style.css">
 </head>
 <body>
+
+    <!-- Header -->
+
     <div class="Title">
         <p>Discover hidden places in the world around you</p>
         <div class="Title__link">
             <a style="color: aquamarine;" href="https://2b7c9247f2bc4b098d435bc3fbbb8854.cc-propeller.cloud/#"><p style="color: aquamarine;">Download Excursion (Coming Soon!)</p></a>
         </div>
+    </div>
+
+    <!-- Content -->
+
+    <div class="Phone">
+        <video autoplay loop>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="Travel-guide">
+        <p class="Travel-guide__title">Your personal travel guide</p>
+        <p class="Travel-guide__subtitle">Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img src="resources/images/camp.jpg" alt="Firecamp">
+    </div>
+
+    <!-- Footer -->
+
+    <div class="Footer">
+        <img src="resources/images/phone.png" alt="phone logo">
+        <p class="Footer__title">Coming Soon for iPhone and Android</p>
+        <div class="Footer__link">
+            <a style="color: aquamarine;" href="https://2b7c9247f2bc4b098d435bc3fbbb8854.cc-propeller.cloud/#"><p style="color: aquamarine;">Download Excursion (Coming Soon!)</p></a>
+        </div>
+        <p class="Footer__copyright">@ Excursion</p>
     </div>
 </body>
 </html>
