--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Content -->
 
     <div class="Phone">
-        <video autoplay loop>
+        <video autoplay muted loop>
             <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
     </div>
